[package]
name = "quantum-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cs238"
crate-type = ["cdylib"]

[dependencies]
num-complex = "0.4.6"
pyo3 = { version = "0.23.3", features = ["extension-module", "num-complex"] }
regex = "1.11.1"
